added login choice screen

--- a/app/src/main/res/layout/login_choice.xml
+++ b/app/src/main/res/layout/login_choice.xml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_vertical"
+    android:gravity="center_horizontal|center_vertical"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:visibility="visible">
 
     <Button
-        android:id="@+id/register"
+        android:id="@+id/homeowner_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Register" />
+        android:background="@android:color/transparent"
+        android:gravity="center"
+        android:text="As Homeowner" />
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/garbagecollector_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login" />
+        android:background="@android:color/transparent"
+        android:text="As Garbage Collector" />
 
 </LinearLayout>
