--- a/app/src/main/res/layout/login_choice.xml
+++ b/app/src/main/res/layout/login_choice.xml
@@ -7,7 +7,7 @@
     android:visibility="visible">
 
     <Button
-        android:id="@+id/homeowner_signup"
+        android:id="@+id/homeowner_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
@@ -15,7 +15,7 @@
         android:text="As Homeowner" />
 
     <Button
-        android:id="@+id/garbagecollector_signup"
+        android:id="@+id/garbagecollector_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
