--- a/app/src/main/res/layout/login_choice.xml
+++ b/app/src/main/res/layout/login_choice.xml
@@ -6,6 +6,15 @@
     android:orientation="vertical"
     android:visibility="visible">
 
+    <TextView
+        android:id="@+id/logintitle"
+        android:layout_width="match_parent"
+        android:layout_height="77dp"
+        android:gravity="center"
+        android:text="LOGIN"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textStyle="bold" />
+
     <Button
         android:id="@+id/homeowner_login"
         android:layout_width="match_parent"
