--- a/app/src/main/res/layout/homeowner_registration.xml
+++ b/app/src/main/res/layout/homeowner_registration.xml
@@ -26,31 +26,45 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
 
+        android:hint="@string/as_homeowner_string"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sign_up_string_textview"
-        tools:text="@string/as_homeowner_string" />
+        app:layout_constraintTop_toBottomOf="@id/sign_up_string_textview" />
 
     <EditText
-        android:id="@+id/name_edittext"
+        android:id="@+id/homeowner_email_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="48dp"
         android:layout_marginRight="16dp"
 
-        android:hint="@string/name_string"
+        android:hint="@string/email_string"
         android:importantForAutofill="no"
         android:inputType="textEmailAddress"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/as_homeowner_textview" />
 
     <EditText
-        android:id="@+id/address_edittext"
+        android:id="@+id/homeowner_password_edittext"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginRight="16dp"
+
+        android:hint="@string/password_string"
+        android:importantForAutofill="no"
+        android:inputType="textPassword"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/homeowner_email_edittext" />
+
+    <EditText
+        android:id="@+id/homeowner_address_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
@@ -62,24 +76,18 @@
         android:inputType="textPostalAddress"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="@id/name_edittext"
-        app:layout_constraintTop_toBottomOf="@id/name_edittext" />
+        app:layout_constraintTop_toBottomOf="@id/homeowner_password_edittext" />
 
-    <EditText
-        android:id="@+id/phone_number_edittext"
+    <Button
+        android:id="@+id/homeowner_register_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="16dp"
         android:layout_marginRight="16dp"
 
-        android:hint="@string/phone_number_string"
-        android:importantForAutofill="no"
-        android:inputType="phone"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="@id/address_edittext"
-        app:layout_constraintTop_toBottomOf="@id/address_edittext" />
+        tools:text="@string/register_string"
+        app:layout_constraintTop_toBottomOf="@id/homeowner_address_edittext"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
