--- a/app/src/main/res/layout/activity_login_garbagecollector.xml
+++ b/app/src/main/res/layout/activity_login_garbagecollector.xml
@@ -8,7 +8,7 @@
     tools:visibility="visible">
 
     <TextView
-        android:id="@+id/loginTitle"
+        android:id="@+id/loginTitle2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -20,21 +20,21 @@
         android:text="LOGIN" />
 
     <TextView
-        android:id="@+id/asHomeowner"
+        android:id="@+id/asGarbageCollector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
         android:layout_marginTop="48dp"
-        android:text="@string/as_homeowner_string"
+        android:text="As Garbage Collector"
         android:textSize="36sp"
         android:textStyle="bold"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/loginTitle" />
+        app:layout_constraintTop_toBottomOf="@id/loginTitle2" />
 
     <EditText
-        android:id="@+id/homeownerEmail"
+        android:id="@+id/garbageCollectorEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
@@ -47,10 +47,10 @@
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/asHomeowner" />
+        app:layout_constraintTop_toBottomOf="@id/asGarbageCollector" />
 
     <EditText
-        android:id="@+id/homeownerPassword"
+        android:id="@+id/garbageCollectorPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
@@ -62,25 +62,25 @@
         android:inputType="textWebPassword"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="@id/homeownerEmail"
-        app:layout_constraintTop_toBottomOf="@id/homeownerEmail"/>
+        app:layout_constraintLeft_toLeftOf="@id/garbageCollectorEmail"
+        app:layout_constraintTop_toBottomOf="@id/garbageCollectorEmail" />
 
     <Button
-        android:id="@+id/login1"
+        android:id="@+id/login2"
         android:layout_width="383dp"
         android:layout_height="55dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintLeft_toLeftOf="@id/homeownerPassword"
-        app:layout_constraintTop_toBottomOf="@id/homeownerPassword" />
+        app:layout_constraintLeft_toLeftOf="@id/garbageCollectorPassword"
+        app:layout_constraintTop_toBottomOf="@id/garbageCollectorPassword" />
 
     <ProgressBar
-        android:id="@+id/progressBar1"
+        android:id="@+id/progressBar2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="165dp"
         android:layout_marginTop="16dp"
-        android:visibility="gone"
-        app:layout_constraintLeft_toLeftOf="@id/login1"
-        app:layout_constraintTop_toBottomOf="@id/login1" />
+        android:visibility="visible"
+        app:layout_constraintLeft_toLeftOf="@id/login2"
+        app:layout_constraintTop_toBottomOf="@id/login2"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
