--- a/app/src/main/res/layout/login_choice.xml
+++ b/app/src/main/res/layout/login_choice.xml
@@ -8,7 +8,7 @@ android:visibility="visible"
 tools:visibility="visible">
 
     <TextView
-        android:id="@+id/sign_up_string_textview"
+        android:id="@+id/loginChoiceTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -34,7 +34,7 @@ tools:visibility="visible">
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logintitle" />
+        app:layout_constraintTop_toBottomOf="@+id/loginChoiceTitle" />
 
     <Button
         android:id="@+id/garbagecollector_login"
@@ -49,7 +49,7 @@ tools:visibility="visible">
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logintitle" />
+        app:layout_constraintTop_toBottomOf="@+id/loginChoiceTitle" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
