--- a/app/src/main/res/layout/signup_choice.xml
+++ b/app/src/main/res/layout/signup_choice.xml
@@ -1,33 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal|center_vertical"
-    android:orientation="vertical"
-    android:visibility="visible">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:visibility="visible"
+tools:visibility="visible">
 
-    <TextView
-        android:id="@+id/signuptitle"
-        android:layout_width="match_parent"
-        android:layout_height="77dp"
-        android:gravity="center"
-        android:text="REGISTER"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textStyle="bold" />
+<TextView
+    android:id="@+id/signUpChoiceTitle"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="16dp"
 
-    <Button
-        android:id="@+id/homeowner_signup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:gravity="center"
-        android:text="As Homeowner" />
+    android:textSize="48sp"
+    android:textStyle="bold"
+    android:visibility="visible"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    tools:text="REGISTER" />
 
-    <Button
-        android:id="@+id/garbagecollector_signup"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:text="As Garbage Collector" />
+<Button
+    android:id="@+id/homeowner_signup"
+    android:layout_width="224dp"
+    android:layout_height="47dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="180dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginBottom="422dp"
+    android:background="@android:color/transparent"
+    android:text="As Homeowner"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/signUpChoiceTitle" />
 
-</LinearLayout>
+<Button
+    android:id="@+id/garbagecollector_signup"
+    android:layout_width="224dp"
+    android:layout_height="47dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="300dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginBottom="422dp"
+    android:background="@android:color/transparent"
+    android:text="As Garbage Collector"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/signUpChoiceTitle" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
