--- a/app/src/main/res/layout/activity_login_homeowner.xml
+++ b/app/src/main/res/layout/activity_login_homeowner.xml
@@ -17,7 +17,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="LOGIN" />
+        android:text="@string/loginTitle" />
 
     <TextView
         android:id="@+id/asHomeowner"
@@ -37,11 +37,9 @@
         android:id="@+id/homeownerEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
         android:layout_marginTop="48dp"
-        android:layout_marginRight="16dp"
 
-        android:hint="Email"
+        android:hint="@string/email"
         android:importantForAutofill="no"
         android:inputType="textEmailAddress"
         android:textSize="24sp"
@@ -57,7 +55,7 @@
         android:layout_marginTop="48dp"
         android:layout_marginRight="16dp"
 
-        android:hint="Password"
+        android:hint="@string/password"
         android:importantForAutofill="no"
         android:inputType="textWebPassword"
         android:textSize="24sp"
@@ -70,6 +68,7 @@
         android:layout_width="383dp"
         android:layout_height="55dp"
         android:layout_marginTop="16dp"
+        android:text="@string/loginButton"
         app:layout_constraintLeft_toLeftOf="@id/homeownerPassword"
         app:layout_constraintTop_toBottomOf="@id/homeownerPassword" />
 
@@ -77,7 +76,7 @@
         android:id="@+id/progressBar1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="165dp"
+        android:layout_marginStart="165dp"
         android:layout_marginTop="16dp"
         android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="@id/login1"
