--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,11 +10,20 @@
 
     <style name="EditTextTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:textSize">16dp</item>
-        <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:layout_marginLeft">16dp</item>
         <item name="android:layout_marginTop">32dp</item>
         <item name="android:layout_marginRight">16dp</item>
         <item name="android:importantForAutofill">no</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="ButtonTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:textSize">16dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:layout_marginTop">16dp</item>
+        <item name="android:layout_marginRight">16dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
