--- a/app/src/main/res/layout/garbage_collector_registration.xml
+++ b/app/src/main/res/layout/garbage_collector_registration.xml
@@ -68,5 +68,14 @@
         app:layout_constraintTop_toBottomOf="@id/garbage_employee_id_edittext"
         app:layout_constraintLeft_toLeftOf="@id/garbage_employee_id_edittext" />
 
+    <ProgressBar
+        android:id="@+id/garbage_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
