--- a/app/src/main/res/layout/homeowner_registration.xml
+++ b/app/src/main/res/layout/homeowner_registration.xml
@@ -81,5 +81,15 @@
         android:text="@string/register_string"
         app:layout_constraintTop_toBottomOf="@id/homeowner_phone_number_edittext"/>
 
+    <ProgressBar
+        android:id="@+id/homeowner_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
