--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -20,5 +20,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="AIzaSyC_PAd4oNEEuurgsS8WBsNk_K3m6cu1cQQ" templateMergeStrategy="preserve" translatable="false">YOUR_KEY_HERE</string>
+    <string name="AIzaSyC_PAd4oNEEuurgsS8WBsNk_K3m6cu1cQQ" templateMergeStrategy="preserve" translatable="false">AIzaSyCGE1q3FIZH54NbBivXX9fD0Gn5dxEMwfI</string>
 </resources>
