--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,14 +1,14 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="EditTextTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="EditTextTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:textSize">16dp</item>
         <item name="android:layout_marginLeft">16dp</item>
         <item name="android:layout_marginTop">32dp</item>
@@ -18,7 +18,7 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-    <style name="ButtonTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="ButtonTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:textSize">16dp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_marginLeft">16dp</item>
