--- a/app/src/main/res/layout/homeowner_dashboard.xml
+++ b/app/src/main/res/layout/homeowner_dashboard.xml
@@ -3,6 +3,23 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/violationText"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:ems="10"
+            android:gravity="center"
+            android:text="List of dates you did not recycle!"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+    </LinearLayout>
+
+
     <ListView
         android:id="@+id/listViewViolations"
         android:layout_width="match_parent"
