--- a/app/src/main/res/layout/activity_edit_homeowner.xml
+++ b/app/src/main/res/layout/activity_edit_homeowner.xml
@@ -41,19 +41,21 @@
 
     <Button
         android:id="@+id/update_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="368dp"
+        android:layout_height="46dp"
         android:layout_marginTop="36dp"
 
         android:text="Update"
+        app:layout_constraintRight_toRightOf="@id/homeowner_edit_number_text"
+        app:layout_constraintLeft_toLeftOf="@id/homeowner_edit_number_text"
         app:layout_constraintTop_toBottomOf="@id/homeowner_edit_number_text"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteX="16dp" />
 
     <ProgressBar
         android:id="@+id/homeowner_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
