--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,6 +44,7 @@
         android:text="@string/loginButton"
 
         app:layout_constraintLeft_toLeftOf="@id/login_password"
+        app:layout_constraintRight_toRightOf="@id/login_password"
         app:layout_constraintTop_toBottomOf="@id/login_password" />
 
     <ProgressBar
