--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/recycling_icon"
+        android:layout_width="433dp"
+        android:layout_height="344dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/recycling_icon" />
+
     <Button
         android:id="@+id/register"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Sign Up" />
+        android:layout_width="287dp"
+        android:layout_height="41dp"
+        android:text="Sign Up"
+        app:layout_constraintRight_toRightOf="@id/recycling_icon"
+        app:layout_constraintLeft_toLeftOf="@id/recycling_icon"
+        app:layout_constraintTop_toBottomOf="@id/recycling_icon"
+        tools:layout_editor_absoluteX="62dp" />
 
     <Button
         android:id="@+id/login"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Login" />
+        android:layout_width="285dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="12dp"
+        android:text="Login"
+        app:layout_constraintTop_toBottomOf="@id/register"
+        app:layout_constraintRight_toRightOf="@id/recycling_icon"
+        app:layout_constraintLeft_toLeftOf="@id/recycling_icon"
+        tools:layout_editor_absoluteX="62dp" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
