--- a/app/src/main/res/layout/signup_choice.xml
+++ b/app/src/main/res/layout/signup_choice.xml
@@ -13,7 +13,7 @@ tools:visibility="visible">
         android:layout_height="wrap_content"
         android:layout_marginTop="152dp"
 
-        android:text="REGISTER"
+        android:text="SIGN UP"
         android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
