--- a/app/src/main/res/layout/activity_garbage_collector_dashboard.xml
+++ b/app/src/main/res/layout/activity_garbage_collector_dashboard.xml
@@ -11,6 +11,7 @@ tools:context=".GarbageCollectorDashboardActivity" >
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="50dp"
         tools:context=".GarbageCollectorDashboardActivity" />
 
     <Button
